trying to fix some stuff

--- a/assign1/index.html
+++ b/assign1/index.html
@@ -4,47 +4,57 @@
   <title>About Me</title>
   <link href="../styles.css" type="text/css" rel="stylesheet" />
 </head>
-<body>
+<body class="assign1">
   <h1 class="center">Christopher Kingdon</h1>
   <hr />
-  <p>
+    <div class="menu">
+    <a href="../index.html">Home</a>
+    </div>
+  <hr />
+  <img src="../content/images/profilePic.jpg" alt="Christopher Kingdon" style="height:200px; width:200px; float:left; padding-right:20px;" />
+  <div class="main">
     <strong>Email: </strong><a href="mailton00827188@ospreys.unf.edu">n00827188@ospreys.unf.edu</a>
     <p>
-      My name is Christopher Kingdon and I am a senior here at UNF majoring in Information Science with a minor in Leadership.
+      My name is Christopher Kingdon and I am a senior here at UNF majoring in Information Science with a minor in Leadership. I hope to graduate this next spring and then get a job doing computer programming. I'm not 100% sure where I want to right after I graduate but my long term goal is to be a game developer.
     </p>
     <p>
-      My Present
+      Currently I work at Publix as a part time cashier &amp backup scan-price/dsd clerk. In my spare time I enjoy playing video games (mostly PC). I also enjoy playing chess and recently i've been learning to play another board game called Go.
     </p>
     <p>
-      My future
+      I'm looking forward to this course as php is one of the languages that I have the least experience with so this will be a good opurtunity to learn it.
     </p>
     <h3>My favorite websites</h3>
     <ul>
       <li><a href="https://www.reddit.com/" target="_blank">Reddit</a></li>
       <li><a href="https://stackoverflow.com/" target="_blank">Stack Overflow</a></li>
       <li><a href="https://github.com/" target="_blank">Github</a></li>
+      <li><a href="https://online-go.com/" target="_blank">Online-Go</a></li>
     </ul>
-    <h3 class="center">My course schedule (Fall 2017)</h3>
-    <table class="center">
-      <tr>
-        <th>Sunday</th>
-        <th>Monday</th>
-        <th>Teusday</th>
-        <th>Wednesday</th>
-        <th>Thursday</th>
-        <th>Friday</th>
-        <th>Saturday</th>
-      </tr>
-      <tr>
-        <td><td>
-        <td>1:30pm-2:45pm<br /><CNT 4504<br />Computer Networks &amp<br />Distributed Systems<br /><br />4:30pm-5:45pm<br />Database Systems<td>
-        <td>4:30pm-5:45pm<br />Senior Project I<td>
-        <td>1:30pm-2:45pm<br /><CNT 4504<br />Computer Networks &amp<br />Distributed Systems<br /><br />4:30pm-5:45pm<br />Database Systems<td>
-        <td>4:30pm-5:45pm<br />Senior Project I<td>
-        <td><td>
-        <td><td>
-      </tr>
-    </table>
-  </p>
+  </div>
+  <h3 class="center" style="clear:both">My course schedule (Fall 2017)</h3>
+  <table class="center assign1">
+    <tr>
+      <th>Sunday</th>
+      <th>Monday</th>
+      <th>Teusday</th>
+      <th>Wednesday</th>
+      <th>Thursday</th>
+      <th>Friday</th>
+      <th>Saturday</th>
+    </tr>
+    <tr>
+      <td></td>
+      <td>1:30pm-2:45pm<br /><CNT 4504<br />Computer Networks &amp<br />Distributed Systems<br /><br />4:30pm-5:45pm<br />Database Systems</td>
+      <td><br /><br /><br /><br />4:30pm-5:45pm<br />Senior Project I</td>
+      <td>1:30pm-2:45pm<br /><CNT 4504<br />Computer Networks &amp<br />Distributed Systems<br /><br />4:30pm-5:45pm<br />Database Systems</td>
+      <td><br /><br /><br /><br />4:30pm-5:45pm<br />Senior Project I</td>
+      <td></td>
+      <td></td>
+    </tr>
+  </table>
+  <div class="center">
+    <h3><font color="orange">Courses not listed</font></h3>
+    <p>Online: COP 4813 Internet Programming<p>
+    </div>
 </body>
 </html>
