--- a/index.html
+++ b/index.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>About Me</title>
+  <title>Home</title>
   <link href="styles.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
-  
+  <div class="center">
+    <h1>ePortfolio for COP 4813</h1>
+    <h2>Christopher Kingdon</h2>
+  </div>
+  <hr />
+  <h3><a href="assign1/index.html">Assignment 1</a></h3>
+  <p>
+    In this assignment I am tasked with creating a basic about me page using various html and css elements.<br />Through this assignment I had a good refresher of the basic html and css elements so that i'm prepared for the rest of the semester.
+  </p>
+  <h4>Learning Objectives</h4>
+  <ul>
+    <li>To become familiar with many common html/css elements.</li>
+    <li>To get to know the student and their current goals.</li>
+  </ul>
+  <hr />
 </body>
 </html>
