created html for assignment 2

--- a/assign1/index.html
+++ b/assign1/index.html
@@ -7,9 +7,7 @@
 <body class="assign1">
   <h1 class="center">Christopher Kingdon</h1>
   <hr />
-    <div class="menu">
-    <a href="../index.html">Home</a>
-    </div>
+  <div class="menu"><a href="../index.html">Home</a></div>
   <hr />
   <img src="../content/images/profilePic.jpg" alt="Christopher Kingdon" style="height:200px; width:200px; float:left; padding-right:20px;" />
   <div class="main">
