--- a/index.html
+++ b/index.html
@@ -12,12 +12,23 @@
   <hr />
   <h3><a href="assign1/index.html">Assignment 1</a></h3>
   <p>
-    In this assignment I am tasked with creating a basic about me page using various html and css elements.<br />Through this assignment I had a good refresher of the basic html and css elements so that i'm prepared for the rest of the semester.
+    In this assignment I am tasked with creating a basic about me page using various html and css elements.<br />
+    Through this assignment I had a good refresher of the basic html and css elements so that i'm prepared for the rest of the semester.
   </p>
   <h4>Learning Objectives</h4>
   <ul>
     <li>To become familiar with many common html/css elements.</li>
     <li>To get to know the student and their current goals.</li>
+  </ul>
+  <hr />
+  <h3><a href="assign2/index.html">Assignment 2</a></h3>
+  <p>
+    Project description here
+  </p>
+  <h4>Learning Objectives</h4>
+  <ul>
+    <li>item 1</li>
+    <li>item 2</li>
   </ul>
   <hr />
 </body>
