--- a/assign1/index.html
+++ b/assign1/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>About Me</title>
+  <meta charset="utf-8" />
   <link href="../styles.css" type="text/css" rel="stylesheet" />
 </head>
 <body class="assign1">
@@ -11,12 +12,12 @@
   <hr />
   <img src="../content/images/profilePic.jpg" alt="Christopher Kingdon" style="height:200px; width:200px; float:left; padding-right:20px;" />
   <div class="main">
-    <strong>Email: </strong><a href="mailton00827188@ospreys.unf.edu">n00827188@ospreys.unf.edu</a>
+    <strong>Email: </strong><a href="mailto:n00827188@ospreys.unf.edu">n00827188@ospreys.unf.edu</a>
     <p>
       My name is Christopher Kingdon and I am a senior here at UNF majoring in Information Science with a minor in Leadership. I hope to graduate this next spring and then get a job doing computer programming. I'm not 100% sure where I want to right after I graduate but my long term goal is to be a game developer.
     </p>
     <p>
-      Currently I work at Publix as a part time cashier &amp backup scan-price/dsd clerk. In my spare time I enjoy playing video games (mostly PC). I also enjoy playing chess and recently i've been learning to play another board game called Go.
+      Currently I work at Publix as a part time cashier &amp; backup scan-price/dsd clerk. In my spare time I enjoy playing video games (mostly PC). I also enjoy playing chess and recently i've been learning to play another board game called Go.
     </p>
     <p>
       I'm looking forward to this course as php is one of the languages that I have the least experience with so this will be a good opurtunity to learn it.
@@ -42,9 +43,9 @@
     </tr>
     <tr>
       <td></td>
-      <td>1:30pm-2:45pm<br /><CNT 4504<br />Computer Networks &amp<br />Distributed Systems<br /><br />4:30pm-5:45pm<br />Database Systems</td>
+      <td>1:30pm-2:45pm<br />CNT 4504<br />Computer Networks &amp;<br />Distributed Systems<br /><br />4:30pm-5:45pm<br />Database Systems</td>
       <td><br /><br /><br /><br />4:30pm-5:45pm<br />Senior Project I</td>
-      <td>1:30pm-2:45pm<br /><CNT 4504<br />Computer Networks &amp<br />Distributed Systems<br /><br />4:30pm-5:45pm<br />Database Systems</td>
+      <td>1:30pm-2:45pm<br />CNT 4504<br />Computer Networks &amp;<br />Distributed Systems<br /><br />4:30pm-5:45pm<br />Database Systems</td>
       <td><br /><br /><br /><br />4:30pm-5:45pm<br />Senior Project I</td>
       <td></td>
       <td></td>
