--- a/assign2/index.html
+++ b/assign2/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Form</title>
+  <meta charset="utf-8" />
   <link href="../styles.css" type="text/css" rel="stylesheet" />
   <script>
     function calculate {
