--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Home</title>
+  <meta charset="utf-8" />
   <link href="styles.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
