--- a/index.html
+++ b/index.html
@@ -24,12 +24,14 @@
   <hr />
   <h3><a href="assign2/index.html">Assignment 2</a></h3>
   <p>
-    Project description here
+    In this assingment I am tasked with creating some type of form that will then utilize Javascript to do some logic.<br />
+    For my project I decided to make a simple calculator that can add, subtract, multiply, and divide any two floating point numbers.<br />
+    You can also persist the answer for another calculation and format the output.
   </p>
   <h4>Learning Objectives</h4>
   <ul>
-    <li>item 1</li>
-    <li>item 2</li>
+    <li>To become familiar with forms.</li>
+    <li>To become familiar with basic Javascript</li>
   </ul>
   <hr />
 </body>
