--- a/index.html
+++ b/index.html
@@ -34,5 +34,15 @@
     <li>To become familiar with basic Javascript</li>
   </ul>
   <hr />
+  <h3><a href="assign2/index.html">Assignment 3</a></h3>
+  <p>
+    Project description
+  </p>
+  <h4>Learning Objectives</h4>
+  <ul>
+    <li>objective 1</li>
+    <li>objective 2</li>
+  </ul>
+  <hr />
 </body>
 </html>
