--- a/assign3/index.html
+++ b/assign3/index.html
@@ -4,22 +4,31 @@
   <title>Form</title>
   <meta charset="utf-8" />
   <link href="../styles.css" type="text/css" rel="stylesheet" />
+  <script src="Statistics.js" type="text/javascript"></script>
+  <script src="../lib/jquery-3.2.1.min.js"></script>
   <script>
     function calculate() {
       //Get the data and make it into an array
-      var rawText = document.getElementById('data').value;
+      //var rawText = document.getElementById('data').value;
+      var rawText = $("#data").val();
       var delimeters = [' ', '\n', ',']
       var numbers = rawText.split(/\n|\t| |,/);
 
       //Convert the text array into a number array
-      for(var i=0; i<textArray.length; i++) {
-        textArray[i] = parseFloat(textArray[i]);
+      for(var i=0; i<numbers.length; i++) {
+        numbers[i] = parseFloat(numbers[i]);
       }
 
+      console.log(numbers);
+
       //Do some math!
-
-      //Print the results
-
+      $('#count').text(findN(numbers));
+      $('#sum').text(findSum(numbers));
+      $('#mean').text(findMean(numbers));
+      $('#median').text(findMedian(numbers));
+      $('#mode').text(findMode(numbers));
+      $('#varience').text(findVariance(numbers));
+      $('#stdDev').text(findStandardDeviation(numbers));
     }
   </script>
 </head>
@@ -41,20 +50,20 @@
     <br />
     <table class="center fixedTable">
       <tr>
+        <th>Number of Elements:</th>
+        <td id="count"></td>
+      </tr>
+      <tr>
+        <th>Sum:</th>
+        <td id="sum"></td>
+      </tr>
+      <tr>
         <th>Mean:</th>
         <td id="mean"></td>
       </tr>
       <tr>
         <th>Median:</th>
         <td id="median"></td>
-      </tr>
-      <tr>
-        <th>Count:</th>
-        <td id="count"></td>
-      </tr>
-      <tr>
-        <th>Summation:</th>
-        <td id="summation"></td>
       </tr>
       <tr>
         <th>Mode:</th>
@@ -69,6 +78,11 @@
         <td id="stdDev"></td>
       </tr>
     </table>
+    <h1>Instructions</h1>
+    <p>This form takes data and gives various information about it inlcuding the mean, mod, median, etc.<br />
+      To use this form simply paste your data into the main text area. It can be a list of floating point numbers<br />
+      that are seperated by spaces, commas, or newlines. Then you hit submit and the program will out your results.
+    </p>
   </div>
 </body>
 </html>
