finished javascript code for project

--- a/assign3/index.html
+++ b/assign3/index.html
@@ -43,7 +43,7 @@
     </form>
 
     <h4>Paste Data below:</h4>
-    <textarea id="data" form="statsForm"></textarea>
+    <textarea class="large" id="data" form="statsForm"></textarea>
     <br />
     <button type="button" onClick="calculate()">Submit</button>
     <br />
