--- a/assign3/index.html
+++ b/assign3/index.html
@@ -18,9 +18,7 @@
       for(var i=0; i<numbers.length; i++) {
         numbers[i] = parseFloat(numbers[i]);
       }
-
-      console.log(numbers);
-
+      
       //Do some math!
       $('#count').text(findN(numbers));
       $('#sum').text(findSum(numbers));
@@ -81,7 +79,8 @@
     <h1>Instructions</h1>
     <p>This form takes data and gives various information about it inlcuding the mean, mod, median, etc.<br />
       To use this form simply paste your data into the main text area. It can be a list of floating point numbers<br />
-      that are seperated by spaces, commas, or newlines. Then you hit submit and the program will out your results.
+      that are seperated by spaces, commas, or newlines. Then you hit submit and the program will out your results.<br />
+      Test results to show that this program works can be found <a href="testResults.html">here.</a>
     </p>
   </div>
 </body>
