--- a/index.html
+++ b/index.html
@@ -36,12 +36,13 @@
   <hr />
   <h3><a href="assign3/index.html">Assignment 3</a></h3>
   <p>
-    Project description
+    In this assingment I create a form that takes in data and gives statistics on it. It makes heavy use of javascript to calculate the values.<br />
+    I also begin to use libraries in this assignment. In particular I made my own javascript library as well as used JQuery.
   </p>
   <h4>Learning Objectives</h4>
   <ul>
-    <li>objective 1</li>
-    <li>objective 2</li>
+    <li>Become more proficiant in javascript especially with arrays and complex functions.</li>
+    <li>Learn how to create and use libraries within a website.</li>
   </ul>
   <hr />
 </body>
