--- a/index.html
+++ b/index.html
@@ -45,5 +45,16 @@
     <li>Learn how to create and use libraries within a website.</li>
   </ul>
   <hr />
+  <h3><a href="assign4/index.html">Assignment 4</a></h3>
+  <p>
+  description here.
+  </p>
+  <h4>Learning Objectives</h4>
+  <ul>
+    <li>an objective</li>
+    <li>another objective</li>
+  </ul>
+  <hr />
+
 </body>
 </html>
