--- a/assign4/index.html
+++ b/assign4/index.html
@@ -4,14 +4,22 @@
   <title>Form</title>
   <meta charset="utf-8" />
   <link href="../styles.css" type="text/css" rel="stylesheet" />
+  <script src="animation.js" type="text/javascript"></script>
+  <script src="../lib/jquery-3.2.1.min.js"></script>
+  <script>
+    function start() {
+      var canvas = $('#mainCanvas')[0].getContext("2d");
+      init(canvas);
+    }
+  </script>
 </head>
-<body id="testName">
+<body id="testName" onload="start();">
   <h1 class="center">Christopher Kingdon</h1>
   <hr />
   <div class="menu"><a href="../index.html">Home</a></div>
   <hr />
   <div class="center">
-    
+    <canvas id="mainCanvas" width="1000" height="600"></canvas>
   </div>
 </body>
 </html>
