Added lightbulb and battery

--- a/credit/credit.html
+++ b/credit/credit.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
 <head>
-
+  <link href="../styles.css" type="text/css" rel="stylesheet" />
 </head>
 <body id="testName">
   <h1 class="center">Christopher Kingdon</h1>
   <hr />
   <div class="menu"><a href="../index.html">Home</a></div>
   <hr />
-  <div class="center">
+  <div>
     <h2>Images</h2>
     <ul>
       <li><a href="https://opengameart.org/content/battery-power-icon">icon-power.png</a></li>
-      <li><a href="http://thinkpixellab.com/pxloader/">PXLoader javascript</a>
+      <li><a href="http://game-icons.net/lorc/originals/light-bulb.html">Light bulb icons</a> -
+        <a href="https://creativecommons.org/licenses/by/3.0/">license (no changes made)</a>
       </li>
+
+      </li>
+    </ul>
+    <h2>Scripts</h2>
+    <ul>
+      <li><a href="https://jquery.com/">JQuery</a></li>
+      <li><a href="http://thinkpixellab.com/pxloader/">PXLoader javascript</a>
     </ul>
   </div>
 </body
