--- a/index.html
+++ b/index.html
@@ -55,6 +55,6 @@
     <li>another objective</li>
   </ul>
   <hr />
-
+  <div class="center"><a href="credit/credit.html">Credit</a></div>
 </body>
 </html>
