--- a/assign4/index.html
+++ b/assign4/index.html
@@ -4,16 +4,12 @@
   <title>Form</title>
   <meta charset="utf-8" />
   <link href="../styles.css" type="text/css" rel="stylesheet" />
-  <script src="animation.js" type="text/javascript"></script>
   <script src="../lib/jquery-3.2.1.min.js"></script>
-  <script>
-    function start() {
-      var canvas = $('#mainCanvas')[0].getContext("2d");
-      init(canvas);
-    }
-  </script>
+  <script src="../lib/PxLoader.js"></script>
+  <script src="../lib/PxLoaderImage.js"></script>
+  <script src="animation.js" type="text/javascript"></script>
 </head>
-<body id="testName" onload="start();">
+<body id="testName" onload="init();">
   <h1 class="center">Christopher Kingdon</h1>
   <hr />
   <div class="menu"><a href="../index.html">Home</a></div>
