--- a/credit/credit.html
+++ b/credit/credit.html
@@ -12,15 +12,16 @@
     <ul>
       <li><a href="https://opengameart.org/content/battery-power-icon">icon-power.png</a></li>
       <li><a href="http://game-icons.net/lorc/originals/light-bulb.html">Light bulb icons</a> -
-        <a href="https://creativecommons.org/licenses/by/3.0/">license (no changes made)</a>
+          <a href="https://creativecommons.org/licenses/by/3.0/">license (no changes made)</a>
       </li>
-
+      <li><a href="https://opengameart.org/content/switch-0">Switch.png</a> -
+          <a href="https://creativecommons.org/licenses/by/3.0/">license (no changes made)</a>
       </li>
     </ul>
     <h2>Scripts</h2>
     <ul>
       <li><a href="https://jquery.com/">JQuery</a></li>
-      <li><a href="http://thinkpixellab.com/pxloader/">PXLoader javascript</a>
+      <li><a href="http://thinkpixellab.com/pxloader/">PXLoader javascript</a></li>
     </ul>
   </div>
 </body
