--- a/assign4/index.html
+++ b/assign4/index.html
@@ -5,8 +5,10 @@
   <meta charset="utf-8" />
   <link href="../styles.css" type="text/css" rel="stylesheet" />
   <script src="../lib/jquery-3.2.1.min.js"></script>
+  <script src="../lib/soundmanager2-jsmin.js"></script>
   <script src="../lib/PxLoader.js"></script>
   <script src="../lib/PxLoaderImage.js"></script>
+  <script src="../lib/PxLoaderAudio.js"></script>
   <script src="animation.js" type="text/javascript"></script>
 </head>
 <body id="testName" onload="init();">
