--- a/credit/credit.html
+++ b/credit/credit.html
@@ -10,18 +10,32 @@
   <div>
     <h2>Images</h2>
     <ul>
+      <li>
+          <a href="https://www.toptal.com/designers/subtlepatterns/">Dark triangles background</a> -
+          <a href=../credit/readme_dark-triangles-png.txt>readme</a>
+      </li>
       <li><a href="https://opengameart.org/content/battery-power-icon">icon-power.png</a></li>
       <li><a href="http://game-icons.net/lorc/originals/light-bulb.html">Light bulb icons</a> -
-          <a href="https://creativecommons.org/licenses/by/3.0/">license (no changes made)</a>
+          <a href="https://creativecommons.org/licenses/by/3.0/">license</a> (no changes made)
       </li>
       <li><a href="https://opengameart.org/content/switch-0">Switch.png</a> -
-          <a href="https://creativecommons.org/licenses/by/3.0/">license (no changes made)</a>
+          <a href="https://creativecommons.org/licenses/by/3.0/">license</a> (no changes made)
       </li>
+    </ul>
+    <h2>Sounds</h2>
+    <ul>
+      <li>
+          <a href="https://freesound.org/people/Deathscyp/sounds/404049/">deathscyp__breaker-1.wav</a>
     </ul>
     <h2>Scripts</h2>
     <ul>
       <li><a href="https://jquery.com/">JQuery</a></li>
-      <li><a href="http://thinkpixellab.com/pxloader/">PXLoader javascript</a></li>
+      <li><a href="http://thinkpixellab.com/pxloader/">PXLoader javascript</a> -
+          <a href="../credit/pxloader-license.txt">license</a>
+      </li>
+      <li><a href="http://www.schillmania.com/projects/soundmanager2/">Sound Manager 2</a> -
+          <a href="../credit/license.txt">license</a>
+      </li>
     </ul>
   </div>
 </body
