--- a/assign4/index.html
+++ b/assign4/index.html
@@ -5,10 +5,8 @@
   <meta charset="utf-8" />
   <link href="../styles.css" type="text/css" rel="stylesheet" />
   <script src="../lib/jquery-3.2.1.min.js"></script>
-  <script src="../lib/soundmanager2-jsmin.js"></script>
   <script src="../lib/PxLoader.js"></script>
   <script src="../lib/PxLoaderImage.js"></script>
-  <script src="../lib/PxLoaderAudio.js"></script>
   <script src="animation.js" type="text/javascript"></script>
 </head>
 <body id="testName" onload="init();">
@@ -18,6 +16,11 @@
   <hr />
   <div class="center">
     <canvas id="mainCanvas" width="1000" height="600"></canvas>
+    <h1>Instructions</h1>
+    <p>Above is an example of a simple circuit. Click the switch to turn the light on and off. <br />
+       Once your battery runs out the circuit will stop working. Click the button below to recharge it!
+    </p>
+    <button id="recharge" onclick="recharge()">Recharge!</button>
   </div>
 </body>
 </html>
