--- a/index.html
+++ b/index.html
@@ -41,18 +41,20 @@
   </p>
   <h4>Learning Objectives</h4>
   <ul>
-    <li>Become more proficiant in javascript especially with arrays and complex functions.</li>
-    <li>Learn how to create and use libraries within a website.</li>
+    <li>To become more proficiant in javascript especially with arrays and complex functions.</li>
+    <li>To learn how to create and use libraries within a website.</li>
   </ul>
   <hr />
   <h3><a href="assign4/index.html">Assignment 4</a></h3>
   <p>
-  description here.
+    In this assignment I am tasked with creating an educational animation. I decided to create an animation of a circuit.<br />
+    The circuit demonstrates several basic ideas of electronics by showing flow control with a switch.
   </p>
   <h4>Learning Objectives</h4>
   <ul>
-    <li>an objective</li>
-    <li>another objective</li>
+    <li>To learn to do basic animations using the html canvas.</li>
+    <li>To demonstrate a solid ability to use javascript.</li>
+    <li>To demonstrate creativity.</li>
   </ul>
   <hr />
   <div class="center"><a href="credit/credit.html">Credit</a></div>
