working on assign 5

--- a/assign4/index.html
+++ b/assign4/index.html
@@ -12,7 +12,10 @@
 <body id="testName" onload="init();">
   <h1 class="center">Christopher Kingdon</h1>
   <hr />
-  <div class="menu"><a href="../index.html">Home</a></div>
+  <div class="menu">
+    <a href="../index.html">Home</a>
+    <span class="menu-right"><a href="index.php">Login</a></span>
+  </div>
   <hr />
   <div class="center">
     <canvas id="mainCanvas" width="1000" height="600"></canvas>
