--- a/credit/credit.html
+++ b/credit/credit.html
@@ -24,8 +24,7 @@
     </ul>
     <h2>Sounds</h2>
     <ul>
-      <li>
-          <a href="https://freesound.org/people/Deathscyp/sounds/404049/">deathscyp__breaker-1.wav</a>
+      <li><a href="https://freesound.org/people/Deathscyp/sounds/404049/">deathscyp__breaker-1.wav</a></li>
     </ul>
     <h2>Scripts</h2>
     <ul>
@@ -33,6 +32,10 @@
       <li><a href="http://thinkpixellab.com/pxloader/">PXLoader javascript</a> -
           <a href="../credit/pxloader-license.txt">license</a>
       </li>
+    </ul>
+    <h2>Other</h2>
+    <ul>
+      <li><a href="https://getbootstrap.com/docs/3.3/getting-started/">Bootstrap CSS</a></li>
     </ul>
   </div>
 </body
