--- a/index.html
+++ b/index.html
@@ -57,6 +57,18 @@
     <li>To demonstrate creativity.</li>
   </ul>
   <hr />
+  <h3><a href="assign5/index.php">Assignment 5</a></h3>
+  <p>
+    In this assignment I am tasked with creating an educational animation. I decided to create an animation of a circuit.<br />
+    The circuit demonstrates several basic ideas of electronics by showing flow control with a switch.
+  </p>
+  <h4>Learning Objectives</h4>
+  <ul>
+    <li>To learn to do basic animations using the html canvas.</li>
+    <li>To demonstrate a solid ability to use javascript.</li>
+    <li>To demonstrate creativity.</li>
+  </ul>
+  <hr />
   <div class="center"><a href="credit/credit.html">Credit</a></div>
 </body>
 </html>
