--- a/shared/header.html
+++ b/shared/header.html
@@ -21,5 +21,8 @@
       <li><a href="../assign4/index.html">Assign4</a></li>
       <li class="active"><a href="../assign5/index.html">Assign5</a></li>
     </ul>
+    <ul class="nav navbar-nav navbar-right">
+      <li><a href="../assign5/index.php?logout=true">Logout</a></li>
+    </ul>
   </div>
 </nav>
