fixed css for old pages

--- a/assign2/index.html
+++ b/assign2/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Assignment 2</title>
   <meta charset="utf-8" />
-  <link href="../styles.css" type="text/css" rel="stylesheet" />
+  <link href="../styles-old.css" type="text/css" rel="stylesheet" />
   <script>
     function validateForm() {
       //Clear validation info
