--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Home</title>
   <meta charset="utf-8" />
-  <link href="styles.css" type="text/css" rel="stylesheet" />
+  <link href="styles-old.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
   <div class="center">
