--- a/assign1/index.html
+++ b/assign1/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>About Me</title>
   <meta charset="utf-8" />
-  <link href="../styles.css" type="text/css" rel="stylesheet" />
+  <link href="../styles-old.css" type="text/css" rel="stylesheet" />
 </head>
 <body class="assign1">
   <h1 class="center">Christopher Kingdon</h1>
