--- a/assign3/index.html
+++ b/assign3/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Form</title>
   <meta charset="utf-8" />
-  <link href="../styles.css" type="text/css" rel="stylesheet" />
+  <link href="../styles-old.css" type="text/css" rel="stylesheet" />
   <script src="Statistics.js" type="text/javascript"></script>
   <script src="../lib/jquery-3.2.1.min.js"></script>
   <script>
