--- a/index.html
+++ b/index.html
@@ -59,14 +59,24 @@
   <hr />
   <h3><a href="assign5/index.php">Assignment 5</a></h3>
   <p>
-    In this assignment I am tasked with creating an educational animation. I decided to create an animation of a circuit.<br />
-    The circuit demonstrates several basic ideas of electronics by showing flow control with a switch.
+    There were two main parts to this assignment both of which were done primarily in php. For the first part I was tasked with creating a login manager. <br />
+    To do this I used a simple form and then checked the username and password against a users file. You can try it out by using the following username<br />
+    and password: <strong>admin Password123</strong> As an alternative you can create your own user <a href="assign5/manage.php">here</a>. Don't worry as can be seen <a href="assign5/users.txt">here</a>, all passwords are first<br />
+    hashed before stored.
+  </p>
+  <p>
+    For the second part I had to create a basic stock portfolio management system. I display a dashboard of the user's portfolio listing their total worth.<br />
+    I then give the user the options to add more stock, delete all shares of a stock, or modify the amount of stock currently held. All transactions are<br />
+    logged in a file which can be found <a href="assign5/transactions.log">here</a>.
+  </p>
+  <p>
+    As part of this project I finally started to implement bootstrap in my website as well.
   </p>
   <h4>Learning Objectives</h4>
   <ul>
-    <li>To learn to do basic animations using the html canvas.</li>
-    <li>To demonstrate a solid ability to use javascript.</li>
-    <li>To demonstrate creativity.</li>
+    <li>To become familiar with using php.</li>
+    <li>To demonstrate critical thinking in solving a real world business problem.</li>
+    <li>To become familiar with common web apis and how to use them.</li>
   </ul>
   <hr />
   <div class="center"><a href="credit/credit.html">Credit</a></div>
