--- a/index.html
+++ b/index.html
@@ -79,6 +79,15 @@
     <li>To become familiar with common web apis and how to use them.</li>
   </ul>
   <hr />
+  <h3><a href="assign6/index.php">Assignment 6</a></h3>
+  <p>
+    stuff
+  </p>
+  <h4>Learning Objectives</h4>
+  <ul>
+    <li>objective</li>
+  </ul>
+  <hr />
   <div class="center"><a href="credit/credit.html">Credit</a></div>
 </body>
 </html>
