--- a/index.html
+++ b/index.html
@@ -92,13 +92,12 @@
   <hr />
   <h3><a href="assign7/index.php">Assignment 7</a></h3>
   <p>
-    In this assignment I began using a database to persist data rather than using flat files. I created a database that holds orders that would go on a stock exchange.
+    In this assignment I was tasked with creating a filter using AJAX for the previous assignment.
   </p>
   <h4>Learning Objectives</h4>
   <ul>
-    <li>To become familiar with MySQL.</li>
-    <li>To learn how to use MySQL in PHP.</li>
-    <li>To demonstrate methods to prevent SQL Injection.</li>
+    <li>To become familiar with AJAX.</li>
+    <li>To learn to use multiple web tools together.</li>
   </ul>
   <hr />
   <div class="center"><a href="credit/credit.html">Credit</a></div>
